fix styling and layout bugs

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
+  @apply p-4;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -6,14 +11,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 html {
-  @apply bg-gray-50 selection:text-white selection:bg-teal-400 scroll-mt-20;
-}
-
-#root {
-  @apply flex flex-col items-center p-4 w-full;
+  @apply bg-gray-50 selection:text-white selection:bg-teal-400;
 }
